src/objects/Campaign_Team__c/Campaign_Team__c.object-meta.xml
<CustomObject>
    <label>Campaign Team</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>