src/objects/Campaign_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Contact should be Honeywell Employee (Contact Is Employee = Checked) and Contact Status should not be inactive</errorMessage>
        <filterItems>
            <field>Contact.Contact_Is_Employee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <infoMessage>Contacts listed are Honeywell Employees</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Team (Contact)</relationshipLabel>
    <relationshipName>Campaign_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>