src/objects/Campaign_Team__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF(Team_User__c !=null, Team_User__r.Email ,IF(Contact__c !=null, Contact__r.Email ,&apos;&apos;))</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>