src/objects/Campaign_Team__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Member&apos;s purpose for attending event</inlineHelpText>
    <label>Purpose</label>
    <type>TextArea</type>
</CustomField>