src/objects/Campaign_Team__c/fields/Team_User__c.field-meta.xml
<CustomField>
    <fullName>Team_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>