src/objects/Campaign_Team__c/validationRules/Campaign_owner_cannot_be_a_team_member.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_owner_cannot_be_a_team_member</fullName>
    <active>false</active>
    <errorConditionFormula>Campaign__r.Owner.Full_Name__c  =  Team_User__r.Full_Name__c</errorConditionFormula>
    <errorMessage>Campaign owner cannot be a campaign team member</errorMessage>
</ValidationRule>