src/objects/Campaign_Team__c/validationRules/User_OR_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>User_OR_Contact</fullName>
    <active>true</active>
    <errorConditionFormula>OR(and(Team_User__c!=null,Contact__c!=null),and(Team_User__c==null,Contact__c==null))</errorConditionFormula>
    <errorMessage>Please select either user or a contact for the campaign team</errorMessage>
</ValidationRule>